--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,5 @@ lib_deps = hideakitai/ArtNet @ 0.8.0
            https://github.com/s00500/ESPUI#ceffe2b
  
 monitor_speed = 115200   
+
+build_flags = -Wall -Werror
