--- a/platformio.ini
+++ b/platformio.ini
@@ -1,20 +1,10 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
 [env:esp32doit-devkit-v1]
-platform = espressif32
-board = esp32doit-devkit-v1
+platform = espressif32 @6.9.0
+board = wt32-eth01
 framework = arduino
 lib_deps = hideakitai/ArtNet @ 0.8.0
            https://github.com/s00500/ESPUI#ceffe2b
  
 monitor_speed = 115200   
 
-build_flags = -Wall -Werror
+build_flags = -Wall -Werror 
